# msys

./: .readthedocs.yaml  .zenodo.json  LICENSE  README.md  debug.py  mkdocs.yml  requirements.txt  resources.json  setup.cfg  setup.py  test-byte.txt  test-string.txt  tox.ini
.github/workflows/: ci.yml  tag_release.yml
docs/: getting-started.md  index.md  requirements.txt
docs/development/: documentation.md  setup.md  tests.md
docs/references/: plugins.md  source.md
examples/: h.html  list_all.py  runtime.py
src/mdd/: __init__.py  square_graph.py  wilson.py  wilson2.py
src/mdd/core/: __init__.py  metadata.py  module.py  option.py  processor.py  serializer.py  unit.py
src/mdd/modules/: __init__.py  math.py  processor.py  sql.py
src/mdd/processors/: __init__.py
src/mdd/types/: __init__.py  vector.py
src/msys/: registration.py  test.py
src/msys/core/: __init__.py  child.py  connectable.py  connection.py  helpers.py  interfaces.py  metadata.py  module.py  node.py  option.py  priority.py  processor.py  registrable.py  registration.py  serializer.py  serializer_collections.py  serializer_lists.py  type.py  unit.py
tests/: conftest.py  test_connections.py  test_math.py  test_metadata.py  test_modules.py  test_np_parser.py  test_option.py  test_registration.py  test_wilson.py  test_wilson2.py
tests/core/: test_connectable.py  test_connections.py  test_metadata.py  test_module.py  test_modules.py  test_option.py  test_types.py
tests/modules/: test_math.py  test_processor.py
tests/tests/: conftest.py  test_file.py
tests/types/: test_file.py
(+74 files in other folders)
