[metadata]
name = MDD
version = attr: mdd.__version__
url = https://github.com/willi-z/mdd
project_urls =
    Source Code = https://github.com/willi-z/mdd
    Issue Tracker = https://github.com/willi-z/mdd/issues/

license = BSD-3-Clause
author = WILLI Zschiebsch


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
# console_scripts =
#     mdd = mdd.cli:main
mdd.modules =
    math = mdd.modules.math:Math
    sql = mdd.modules.sql:SQL
    processor = mdd.modules.processor:DefaultProcessor
mdd.types =
    vector = mdd.types.vector:VectorType

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    mdd
    tests

[coverage:paths]
source =
    src